--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -31,5 +31,8 @@
             </tbody>
         <% }) %> 
     </table>
+    <% if (msg) { %>
+        <h3><%= msg %></h3>
+      <% } %> 
 </body>
 </html>
