--- a/views/login.ejs
+++ b/views/login.ejs
@@ -67,5 +67,8 @@
             <button type="submit">Login</button>
         </div>
       </form>
+      <% if (msg) { %>
+        <h3><%= msg %></h3>
+      <% } %> 
   </body>
 </html>
