--- a/views/editform.ejs
+++ b/views/editform.ejs
@@ -1,35 +1,53 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Course</title>
+    <style>
+        #form{
+          margin: auto;
+        }
+        input{
+          width: 300px;
+        }
+        label{
+          text-align: left;
+        }
+    </style>
+    <title>Admin</title>
 </head>
 <body>
-    <form action="/courses/edit/<%= data.id %> " method="POST">
-        <label><b>Course Name</b></label> <br>
-        <input
-          type="text"
-          name="course_name"
-          value="<%= data.course_name %> "
-        /><br><br>
+    <div>
+        <%- include('navbar') %> 
+    </div>
+    <center>
+      <h1>Course</h1>
+    <br><br>
+    <form id="form" action="/courses/edit/<%= data.id %> " method="POST">
+      <label><b>Course Name</b></label> <br>
+      <input
+        type="text"
+        name="course_name"
+        value="<%= data.course_name %> "
+      /><br><br>
 
-        <label><b>Lecturer Name</b></label> <br>
-        <input
-          type="text"
-          name="lecturer_name"
-          value="<%= data.lecturer_name %> "
-        /><br><br>
+      <label><b>Lecturer Name</b></label> <br>
+      <input
+        type="text"
+        name="lecturer_name"
+        value="<%= data.lecturer_name %> "
+      /><br><br>
 
-        <label><b>Location</b></label><br>
-        <input
-          type="text"
-          name="location"
-          value="<%= data.location %> "
-        /><br><br>
-        <div>
+      <label><b>Location</b></label><br>
+      <input
+        type="text"
+        name="location"
+        value="<%= data.location %> "
+      /><br><br>
+      <div>
             <button type="submit">Edit</button>
-        </div>
-      </form>
-</body>
+          </div>
+        </form>
+      </center>
+  </body>
 </html>
