--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,45 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>College Course</title>
     <style>
-      div {
-        width: 200px;
-      }
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-      }
-      li {
-        font: 200 20px/1.5 Helvetica, Verdana, sans-serif;
-        border-bottom: 1px solid #ccc;
-      }
-      li:last-child {
-        border: none;
-      }
-      li a {
-        text-decoration: none;
-        color: #000;
-        display: block;
-        width: 200px;
-        -webkit-transition: font-size 0.3s ease, background-color 0.3s ease;
-        -moz-transition: font-size 0.3s ease, background-color 0.3s ease;
-        -o-transition: font-size 0.3s ease, background-color 0.3s ease;
-        -ms-transition: font-size 0.3s ease, background-color 0.3s ease;
-        transition: font-size 0.3s ease, background-color 0.3s ease;
-      }
-      li a:hover {
-        font-size: 30px;
-        background: #f6f6f6;
-      }
     </style>
   </head>
   <body>
-    <%- include('navbar') %>
-    <!-- <div>
-      <ul>
-        <li><a href="/">Home</a></li><br>
-      </ul>
-    </div> -->
+    <div>
+      <%- include('navbar') %>
+    </div>
+    <h3>SIGN UP</h3>
     <form action="/signup" method="POST">
         <label><b>Full Name</b></label> <br>
         <input
